public/css/tabelaPosts.css
:root {
    --corclara: #FEECE8;
    --fontetitulo: "Erica One", sans-serif;
    --pesotitulo: 100;
    --linhatabela: #FEB579;
    --fonte: "Inter", sans-serif;
    --cordestaque: #C06850;
    --pesocabtab: 800;
    --pesogertab: 550;
    --pesopesq: 500;
    --cortextopesq: #773B36;

    /*! CORES PADRÃO DOS MODAIS */

    --cor-branco-300: #F4D8D2;
    --cor-branco-400: #E7C6BE;
    --cor-vinho-100: #5D1D2D;
    --cor-vermelho-50: #A62C3A;
    --cor-laranja-200: #AC432B;

    /** var modal editar */
    --cor-branco-200: #FEECE8;
    --cor-branco-100: #FFFFFF;
    --cor-preto-100: #000000;
    --cor-marrom-100: #6D3534;
    --cor-vermelho-100: #FF0000;
    --cor-verde-100: #22C55E;

    /** var modal visualizar e excluir */
     --fundodecorcontainerdados: #F7DBD4; 
    --corfontedadovisu: #FEECE8;
    --corfontedadovisusub: #AE706D;

    --pesotitulomodal: 600;
    --pesosub: 600;

    --colorinfo: #571A29;
    --pesomodal: 600;
    --tamfontemodal: 0.8rem;
    --tamfontemodaldes: 0.6rem;
    --borderperfil: #EDBFBB;
    --colorborda: #E8BDB6;

    /* O resto dos botões vai seguir o padrão de cores do madal de editar */
    --colorid: #7E193B;

   --fonte-modal-titulo: "Montserrat", sans-serif;
    --fonte-modal: "Montserrat", sans-serif;
    --coraviso: #571A29;
    --cordestaviso: #C2502E;
    --backbotao: ##622223;
    --letrabotao: #FEECE8;

    --pesoaviso: 800;
    --tamaviso: 1rem;

    --pesoavisorodape: 500;
    --tamavisorod: 0.8rem;

    --pesoexcluirbotao: 700;

}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

#tbposts{
    padding: 0 2rem 4rem 0;
    min-height: 100vh;

   
    background: linear-gradient(
        #6D3534 39%, 
        #9A4E45 75%,
        #C66E57 94%,
        #E08E6D 100%
    );
    
}
.pagecontainer{
    /* display: flex;
    justify-content: end; */
    padding-top: 1rem;
    margin-left: 10%;
    width: 90%;
}

.addUser {
    color: #000000;
}

.infoUser {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1rem;
}

.topoTabelaPosts {
    display: flex;
    /* o justify sempre mexe no eixo principal nesse caso row */
    justify-content: space-between;

    align-items: center;

}

.textoTitulo {
    color: var(--corclara);
    font-family: var(--fontetitulo);
    font-weight: var(--pesotitulo);
}

.titulo {
    text-align: center;
}

.tabela{
    display: flex;
    flex-direction: column;
    width: 100%;

    /* Para não ter a barra de arrastar para baixo */
    overflow-y: hidden;

    margin-top: 3rem;
 
    justify-content: center;

    /*! para tds as colunas da tabela ficarem do msm tamanho */
    table-layout: fixed;

    /*! qunado a lateral da tabela ficar maior q a tela, com isso é posivel rolar ela pro lado sem quebrar a tabela */
    overflow-x: auto;

    border-radius: 1rem;

    background-color: var(--corclara);
}

/*? colunas das tabelas coluna cabeçalho e coluna body */
.colunaCab, .colunageral{
    text-align: center;

    /* add um espaço na no topo e no baixo da div */
    padding: 1.5vh;

    font-family: var(--fonte);

}

.colunageral {
    border-top: 2px solid var(--linhatabela);
    font-weight: var(--pesogertab);
}

.capa-thriller {
    height: 3rem;
    width: 3rem;
}

.colunaCab {
    color: var(--cordestaque);
    font-weight: var(--pesocabtab);
}

.textop {
    font-family: var(--fonte);
    color: var(--corclara);
}

.textoh3 {
    font-family: var(--fonte);
    color: var(--corclara);
}

.icone {
    color: var(--corclara);
    
}

.addPost {
    background-color: var(--cordestaque);
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    border-radius: 1rem;
    height: 2.5rem;
    width: 8rem;

}

.pesquisar {
    width: 100vw;
    padding-left: 0;
    /* background-color: red; */
}


.pesqUser {
    /* background-color: var(--corclara); */
    background: linear-gradient(
            135deg,
            rgba(255, 255, 255, 0.08),
            rgba(255, 255, 255, 0.03)
        );
    background-image: url(../assets/Frame94.svg); 
    /*! pra img nn repitir no fundo td */
    background-repeat: no-repeat;

    /* border-radius: 3rem;
    border: 1rem solid #6D3534; */

    /* cima direita baixo esquerda */
    padding: 1rem 1rem 1rem 3rem;

    /*! coloca o o back 1 p/ laterais e no centro de td */
    background-position: 1rem center; 

    backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    border: 1px solid var(--cor-laranja-200);
    box-shadow:
        inset 0 1px 1px rgba(255,255,255,0.08),
        0 8px 32px rgba(0,0,0,0.35);
    border-radius: 50px;
}

.pesqUser::placeholder {
    color: var(--cor-branco-100);
    opacity: 0.5;
    font-family: var(--fonte-primaria);
}

/* *Animação ao passar o mouse por cima dos ícones de ação da tabela de usuários */
.tabelageral .acao {
    transition: transform 0.2s;
}

.tabelageral .acao:hover {
    transform: scale(1.35);
    cursor: pointer;
}

/* *ESTILO DO MODAL DE EDIÇÃO DE POSTS */
.modal-edicao-posts {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 45%;
    height: 85%;
    box-shadow: 1.5px 1.5px 1.5px 1.5px rgba(255, 255, 255, 0.5);
    border-radius: 30px;
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    background-image: url(../assets/fundo-modais-editada.jpeg);
    background-size: cover;
}    

/* *Estilo da secao do texto, da foto, e do ícone de fechar o modal */
.modal-edicao-posts .secao-texto-foto-fechar-modal {
    width: 90%;
    height: 23%;
    display: flex;
    justify-content: space-between;
}

/* *Estilo do texto de editar foto da capa do álbum */
.modal-edicao-posts .container-texto {
    font-size: 0.6rem;
    width: 35%;
    color: var(--cor-branco-300);
    font-family: var(--fonteaviso);
}
/* ... */

